syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Ism.Storage.Core.Configuration.V1.Protos";

package storage;

service ConfigurationService {
  rpc GetConfiguration (GetConfigurationRequest) returns (GetConfigurationResponse);
  rpc SaveConfiguration (SaveConfigurationRequest) returns (google.protobuf.Empty);
}

// Type Messages

message ConfigurationContextMessage {
    google.protobuf.StringValue idnId = 1;
    google.protobuf.StringValue siteId = 2;
    google.protobuf.StringValue departmentId = 3;
    google.protobuf.StringValue systemId = 4;
    google.protobuf.StringValue userId = 5;
}

message ConfigurationSaveContextMessage {
    ConfigurationKindMessage kind = 1;
    google.protobuf.StringValue id = 2;
}

// Enums

enum ConfigurationKindMessage {
    Undefined = 0;
    IDN = 1;
    Site = 2;
    Department = 3;
    System = 4;
    User = 5;
}

// Request Messages

message GetConfigurationRequest {
    string section = 1;
    uint32 version = 2;
    ConfigurationContextMessage context = 3;
}

message SaveConfigurationRequest {
    string section = 1;
    uint32 version = 2;
    string configurationJson = 3;
    ConfigurationSaveContextMessage context = 4;
}

// Response Messages

message GetConfigurationResponse {
    bool success = 1;
    google.protobuf.StringValue configurationJson = 2;
}
